scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics13.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,8): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    var v: () => number;
           ~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.